--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,5 @@
 sdk.dir=C:\\Users\\priet\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\src\\flutter
+flutter.sdk=C:\\Users\\priet\\fvm\\versions\\stable
+flutter.buildMode=debug
+flutter.versionName=1.0.0
+flutter.versionCode=1
