--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
     sdk: flutter
   dartz: ^0.10.1
   freezed_annotation: ^2.0.3
-  
+  flutter_bloc: ^8.0.1
 
 dev_dependencies:
   flutter_test:
