--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,5 +1,5 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\Users\priet\fvm\default
+FLUTTER_ROOT=C:\Users\priet\fvm\versions\stable
 FLUTTER_APPLICATION_PATH=C:\Users\priet\Documents\GitHub\stratpoint_internship
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
