--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   dartz: ^0.10.1
   freezed_annotation: ^2.0.3
   flutter_bloc: ^8.0.1
+  firebase_core: ^1.17.1
+  firebase_auth: ^3.3.19
+  google_sign_in: ^5.3.2
 
 dev_dependencies:
   flutter_test:
