--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,8 @@ dependencies:
   firebase_auth: ^3.3.19
   google_sign_in: ^5.3.2
   injectable: ^1.5.3
-  get_it: ^7.2.0
+  get_it: ^7.2.
+  bloc: ^8.0.3
 
 
 dev_dependencies:
