--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   bloc: ^7.1.0 # 8.0.3
   another_flushbar: ^1.10.29
   uuid: ^3.0.6
-
+  auto_route: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -33,6 +33,7 @@ dev_dependencies:
   build_runner: ^2.1.11
   flutter_lints: ^2.0.0
   injectable_generator: ^1.5.3
+  auto_route_generator: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
