--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   another_flushbar: ^1.10.29
   uuid: ^3.0.6
   auto_route: ^4.0.1
+  kt_dart: ^0.10.0
 
 dev_dependencies:
   flutter_test:
