--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: stratpoint_internship
-description: A new Flutter project.
+description: Notes App from ResoCoder Bootcamp
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -18,6 +18,7 @@ dependencies:
   flutter_bloc: ^7.1.0 # 8.0.1
   firebase_core: ^1.17.1
   firebase_auth: ^3.3.19
+  cloud_firestore: ^3.1.17
   google_sign_in: ^5.3.2
   injectable: ^1.5.3
   get_it: ^7.2.0
@@ -26,6 +27,7 @@ dependencies:
   uuid: ^3.0.6
   auto_route: ^4.0.1
   kt_dart: ^0.10.0
+  json_annotation: ^4.5.0
 
 dev_dependencies:
   flutter_test:
@@ -35,6 +37,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   injectable_generator: ^1.5.3
   auto_route_generator: ^4.0.0
+  json_serializable: ^6.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
