--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   auto_route: ^4.0.1
   kt_dart: ^0.10.0
   json_annotation: ^4.5.0
+  rxdart: ^0.27.4
 
 dev_dependencies:
   flutter_test:
