--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   json_annotation: ^4.5.0
   rxdart: ^0.27.4
   flutter_hooks: ^0.18.4
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
