--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   rxdart: ^0.27.4
   flutter_hooks: ^0.18.4
   provider: ^6.0.3
+  flutter_slidable: ^1.3.0
 
 dev_dependencies:
   flutter_test:
