--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_hooks: ^0.18.4
   provider: ^6.0.3
   flutter_slidable: ^1.3.0
+  implicitly_animated_reorderable_list: ^0.4.2
 
 dev_dependencies:
   flutter_test:
