--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,14 +15,14 @@ dependencies:
     sdk: flutter
   dartz: ^0.10.1
   freezed_annotation: ^2.0.3
-  flutter_bloc: ^7.1.0 # 8.0.1
+  flutter_bloc: ^8.0.1
   firebase_core: ^1.17.1
   firebase_auth: ^3.3.19
   cloud_firestore: ^3.1.17
-  google_sign_in: ^5.3.2
+  google_sign_in: ^5.3.3
   injectable: ^1.5.3
   get_it: ^7.2.0
-  bloc: ^7.1.0 # 8.0.3
+  bloc: ^8.0.3
   another_flushbar: ^1.10.29
   uuid: ^3.0.6
   auto_route: ^4.0.1
